Fix some deprecation warnings resulting from the update to Java 21.